--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>My Website</title>
-  <body>
+  <body bgcolor=orange>
     <h1>Welcome to my website!</h1>
     After that, you can put some normal text here.
     <p>This is a new paragraph for example.
