--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
   <title>My Website</title>
   <body bgcolor=orange>
-    <h1>Welcome to my website!</h1>
-    After that, you can put some normal text here.
-    <p>This is a new paragraph for example.
-    <hr>
-    <h2>Here is another section...</h2>
+    <h1>Random.org</h1>
+    Mia!
     <hr>
   </body>
 </html>
