--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <title>My Website</title>
   <body bgcolor=orange>
-    <h1>Random.org</h1>
-    Mia!
+    <h1>This is a test</h1>
+    Test 1, 2, 3...
     <hr>
   </body>
 </html>
