--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <body bgcolor=orange>
     <h1>This is a test</h1>
     Test 1, 2, 3...
+    <img src="2014-04-12 13.53.20.jpg">Cats...</img>
     <hr>
   </body>
 </html>
