--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>My Website</title>
   <body bgcolor=orange>
     <h1>This is a test</h1>
-    Test 1, 2, 3...
+    <b>Test</b> <i>1,</i> 2, 3...
     <img src="2014-04-12 13.53.20.jpg" width=500 height=600>We can't load the cats...</img>
     <hr>
   </body>
