--- a/index.html
+++ b/index.html
@@ -5,5 +5,39 @@
     <b>Test</b> <i>1,</i> 2, 3...
     <img src="2014-04-12 13.53.20.jpg" width=500 height=600>We can't load the cats...</img>
     <hr>
+   <table width='100%' border=1px cellspacing=0>
+ <caption>Table of Scores</caption>
+ <tr>
+     <th>Number</th>
+     <th>First Name</th>
+     <th>Last Name</th>
+     <th>Points</th>
+ </tr>
+ <tr>
+     <td>1</td>
+     <td>Russell</td>
+     <td>Jackson</td>
+     <td>94</td>
+ </tr>
+ <tr>
+     <td>2</td>
+     <td>John</td>
+     <td>Deere</td>
+     <td>80</td>
+ </tr>
+ <tr>
+     <td>3</td>
+     <td>Nikola</td>
+     <td>Tesla</td>
+     <td>100</td>
+ </tr>
+ <tr>
+     <td>4</td>
+     <td>Richard</td>
+     <td>Smith</td>
+     <td>50</td>
+ </tr>
+ </table>
+<hr>
   </body>
 </html>
