--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <body bgcolor=orange>
     <h1>This is a test</h1>
     <b>Test</b> <i>1,</i> 2, 3...
-    <img src="2014-04-12 13.53.20.jpg" width=500 height=600>We can't load the cats...</img>
+    <img src="2014-04-12 13.53.20.jpg" width=500 height=600>
     <hr>
-   <table width='100%' border=1px cellspacing=0>
+   <table width=500 border=1px cellspacing=0>
  <caption>Table of Scores</caption>
  <tr>
      <th>Number</th>
