--- a/index.html
+++ b/index.html
@@ -39,5 +39,11 @@
  </tr>
  </table>
 <hr>
+    <audio controls>
+    <source src="horse.ogg" type="audio/ogg">
+    <source src="horse.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+    <hr>
   </body>
 </html>
