--- a/index.html
+++ b/index.html
@@ -11,39 +11,44 @@
     Your browser does not support the audio element.
 </audio>
     <hr>
-   <table width=500 border=1px cellspacing=0>
- <caption>Table of Scores</caption>
+ <table width='100%' border=1px cellspacing=0>
+     <caption><h1>My Schedule</h1></caption>
  <tr>
-     <th>Number</th>
-     <th>First Name</th>
-     <th>Last Name</th>
-     <th>Points</th>
+     <th>Time</th>
+     <th>Room</th>
+     <th>Class</th>
  </tr>
  <tr>
-     <td>1</td>
-     <td>Russell</td>
-     <td>Jackson</td>
-     <td>94</td>
+     <td rowspan=2><b>7:20-8:10</b></td>
+     <td rowspan=2>SE 226</td>
+     <td><i>Period 1</i></td>
+ </tr>
+  <tr>
+          <td>Computer Science</td>
+  </tr>
+  <tr>
+      <td rowspan=2><b>8:15-9:05</b></td>
+     <td rowspan=2>SE 224</td>
+      <td><i>Period 2</i></td>
+ </tr>
+  <tr>
+          <td>Planning</td>
+  </tr>
+      <tr>
+          <td><b>9:10-9:35</b></td>
+     <td>SE 224</td>
+     <td>Advisory</td>
  </tr>
  <tr>
-     <td>2</td>
-     <td>John</td>
-     <td>Deere</td>
-     <td>80</td>
+     <td rowspan=2><b>9:40-10:30</b></td>
+     <td rowspan=2>SE 224</td>
+     <td><i>Period 3</i></td>
  </tr>
- <tr>
-     <td>3</td>
-     <td>Nikola</td>
-     <td>Tesla</td>
-     <td>100</td>
- </tr>
- <tr>
-     <td>4</td>
-     <td>Richard</td>
-     <td>Smith</td>
-     <td>50</td>
- </tr>
+  <tr>
+          <td>AP Calculus AB</td>
+  </tr>
  </table>
+
 <hr>
   </body>
 </html>
