--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Your browser does not support the audio element.
 </audio>
     <hr>
- <table width='100%' border=1px cellspacing=0>
+ <table width=500 border=1px cellspacing=0>
      <caption><h1>My Schedule</h1></caption>
  <tr>
      <th>Time</th>
